--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <div class="box">
                     <div class="detail-box">
                       <h1>
-                        Boxing <br />
+                        Vaithee <br />
                         Center
                       </h1>
                       <hr />
